Smaller headings for narrow displays

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,6 +24,12 @@ h1 {
 
 h1 > .small { font-size: 3rem; }
 
+@media (max-width: 899px) {
+  h1 { font-size: 2rem; line-height: 2rem; }
+  h1 > .small { font-size: 1.5rem; }
+}
+
+
 h2 {
   font-family: Source Sans Pro; font-weight: 700;
   text-transform: uppercase;
@@ -130,174 +136,3 @@ footer {
   color: #333;
 }
 
-
-/*
-html {
-  font-size: 100%;
-}
-
-body {
-  font-size: 1rem; font-family: Source Sans Pro;
-  background-repeat: no-repeat; background-position: 50% 50%;
-  background-color: #900;
-}
-
-ul {
-  list-style-type: none; margin-left: 0;
-}
-
-a:link, a:hover, a:active, a:visited { color: inherit; text-decoration: underline; }
-
-h1, h2, h3 {
-  margin: 0; padding: 0;
-}
-
-
-h1 {
-  display: block;
-  padding: 10rem 0 10rem 0;
-  font-family: Quicksand; font-weight: 700; font-size: 4.5rem;
-  text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.5);
-  line-height: 4.5rem;
-  color: #fff;
-  text-align: center;
-}
-
-h1 > .small {
-  font-size: 3rem;
-}
-
-h2 {
-  font-family: Quicksand; font-weight: 700;
-  text-transform: uppercase;
-  font-size: 1.75rem;
-  color: #fff; text-shadow: 2px 2px 2px #000;
-}
-
-
-h3 {
-  margin-bottom: 18px;
-  font-family: Source Sans Pro; font-weight: 600;
-  text-transform: uppercase;
-  font-size: 2rem; line-height: 2rem;
-}
-
-
-section#title {
-  color: #fff; font-family: Quicksand, Source Sans Pro; font-weight: 700; text-transform: uppercase; padding-top: 2vh;
-}
-
-section#abonnements {
-  position: relative; margin-top: 0vh;
-}
-
-section#abonnements h3 {
-  position: absolute; width: 100%;
-  text-shadow: 1px 1px 1px #333;
-  color: #fff;
-  text-align: center;
-}
-
-section#libriaire {
-  position: relative;
-}
-
-
-#librairie h3 {
-  color: #111;
-  font-size: 1.5rem; font-weight: 700;
-  line-height: 1.375rem;
-}
-
-#librairie h3 > .sub {
-  font-size: 1.188rem;
-}
-
-.row {
-  overflow: hidden;
-  background-color: #fff;
-}
-
-.row.trans {
-  background-color: transparent;
-}
-
-.column {
-  padding: 15px;
-}
-
-.r169 {
-  position: relative; display: block;
-  width: 100%;
-  padding-bottom: 56.25%; margin: 0px;
-  background-color: #369;
-  background-image: url(card1.jpg); background-position: 50% 50%; background-size: 100%;
-  cursor: pointer;
-  transition: 0.15s;
-}
-
-.r169:hover, .r169:active {
-  background-size: 150%;
-}
-
-.r11 {
-  position: relative; display: block;
-  width: 100%;
-  padding-bottom: 100%; margin: 18px 0 0 0; outline: none;
-  background-color: #69f; background-position: 50% 50%; background-repeat: no-repeat; background-size: 100%;
-  cursor: pointer;
-  transition: 0.15s;
-}
-
-.r11:hover, .r11:active {
-  background-size: 125%;
-}
-
-.r169 > div, .r11 > div {
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
-  padding: 12px;
-}
-
-.desc {
-  font-size: 0.938rem;
-  padding: 12px;
-}
-
-.button, .button:link, .button:visited {
-  display: block;
-  margin: 0 auto 12px auto;
-  width: 120px;
-  background-color: #900;
-  font-family: Quicksand; font-weight: 600;
-  text-transform: uppercase;
-  transition: 0.15s;
-}
-
-.button:hover, .r169:hover .button, .r11:hover .button {
-  background-color: #c00;
-}
-
-.r169 .button {
-  border: solid 2px #fff;
-  margin-top: 37.5%;
-  transform: skewY(-9deg);
-}
-
-.r11 .button {
-  border: solid 2px #fff;
-  margin-top: 85%;
-  transform: skewY(-9deg);
-}
-
-.prix {
-  color: #c33; border: solid 1px #c33; padding: 0 1px;
-}
-
-
-
-footer {
-  margin: 48px 0;
-  font-size: 0.938rem;
-}
-*/
