New colors, bg, snowflakes

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,11 +3,15 @@ html {
 }
 
 body {
+  position: relative;
   /*background-color: #900;*/
-  background-color: #369;
+  /*background-color: #369;*/
+  background-color: #290b6b;
   font-size: 1rem;
   font-family: Source Sans Pro;
   padding-bottom: 72px;
+  overflow-x: hidden;
+
 }
 
 ul {
@@ -24,6 +28,22 @@ h1 {
 }
 
 h1 > .small { font-size: 3rem; }
+
+.mask-bottom {
+  position: absolute; z-index: 0;
+  top: 0; left: 0; height: 100vh; width: 100vw;
+  background-image: url(bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 -150px;
+  /*background-color: red;*/
+}
+
+.mask-top {
+  position: absolute;
+  top: 0; right: 0; bottom:0;  left: 0;
+  background: linear-gradient(to top, rgba(41, 11, 107, 1) 0%, rgba(41, 11, 107, 0.8) 15%, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0) 100%);
+}
 
 a.logocf {
   display: block; position: absolute;
@@ -47,6 +67,7 @@ a.logocf:hover, a.logocf:active {
 }
 
 
+
 h2 {
   font-family: Source Sans Pro; font-weight: 700;
   text-transform: uppercase;
@@ -57,8 +78,9 @@ h2 {
   width: 100%;
   color: #fff;
   font-size: 1.75rem; line-height: 1.75rem;
-  text-shadow: 2px 1px 1px #063; text-align: center;
-  background-color: #396;
+  /*text-shadow: 2px 1px 1px #063;*/ text-shadow: 1px 1px 1px #3b1e59; text-align: center;
+  /*background-color: #396;*/
+  background-color: #8e4ad8;
   opacity: 1;
 }
 
@@ -86,6 +108,7 @@ h2 > .small {
 }
 
 .row {
+  position: relative;
   background-color: #fff;
 }
 
@@ -111,13 +134,14 @@ h2 > .small {
 
 .inter h1 {
   padding: 0 0 1rem 0;
-  color: #063;
+  /*color: #063;*/ color: #3b1e59;
   font-size: 2rem; line-height: 2rem;
   text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.25);
 }
 
 .inter p {
-  color: #063; font-weight: 600;
+  /*color: #063;*/ color: #3b1e59;
+  font-weight: 600;
   text-align: center;
 }
 
@@ -179,7 +203,6 @@ a.r11:hover .button, a.r169:hover .button {
   border: solid 2px #c33; padding: 0 1px;
   font-size: 0.875rem; font-weight: 700;
   color: #c33;
-  cursor: pointer;
 }
 
 .video-container.ratio43 {
@@ -206,3 +229,66 @@ footer {
   color: #333;
 }
 
+
+path, polygon {
+  fill: #fff;
+}
+
+
+
+#snowflake1 { animation: snow1 10000ms ease-in infinite forwards; fill-opacity: 0; }
+#snowflake2 { animation: snow2 12000ms 4s ease-in infinite forwards; fill-opacity: 0; }
+#snowflake3 { animation: snow3 8000ms 7s ease-in infinite forwards; fill-opacity: 0; }
+#snowflake4 { animation: snow4 7500ms 6s ease-in infinite forwards; fill-opacity: 0; }
+#snowflake5 { animation: snow5 9000ms 9s ease-in infinite forwards; fill-opacity: 0; }
+#snowflake6 { animation: snow6 9300ms 3.5s ease-in infinite forwards; fill-opacity: 0; }
+
+
+@keyframes snow1{
+  0%   {transform: translateX(50vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  50% {transform: translateX(52vw) translateY(1000px) rotate(359deg); fill-opacity:1; }
+  51% {transform: translateX(2vw) translateY(1000px) rotate(0deg); fill-opacity: 0; }
+  52% {transform: translateX(0px) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  100% {transform: translateX(5vw) translateY(1000px) rotate(70deg); fill-opacity: 1; }
+}
+
+@keyframes snow2{
+  0%   {transform: translateX(20vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  50% {transform: translateX(42vw) translateY(1000px) rotate(50deg); fill-opacity:1; }
+  51% {transform: translateX(4vw) translateY(1000px) rotate(0deg); fill-opacity: 0; }
+  52% {transform: translateX(0vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  100% {transform: translateX(10vw) translateY(1000px) rotate(200deg); fill-opacity:1; }
+}
+
+}
+@keyframes snow3{
+  0%   {transform: translateX(70vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  50% {transform: translateX(68vw) translateY(1000px) rotate(300deg); fill-opacity:1; }
+  51% {transform: translateX(2vw) translateY(1000px) rotate(0deg); fill-opacity: 0; }
+  52% {transform: translateX(60vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  100% {transform: translateX(50vw) translateY(1000px) rotate(-60deg); fill-opacity:1; }
+}
+
+@keyframes snow4{
+  0%   {transform: translateX(0vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  50% {transform: translateX(1vw) translateY(1000px) rotate(50deg); fill-opacity:1; }
+  51% {transform: translateX(2vw) translateY(1000px) rotate(0deg); fill-opacity: 0; }
+  52% {transform: translateX(30vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  100% {transform: translateX(50vw) translateY(1000px) rotate(70deg); fill-opacity:1; }
+}
+
+@keyframes snow5{
+  0%   {transform: translateX(65vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  50% {transform: translateX(40vw) translateY(1000px) rotate(90deg); fill-opacity:1; }
+  51% {transform: translateX(20vw) translateY(1000px) rotate(0deg); fill-opacity: 0; }
+  52% {transform: translateX(35vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  100% {transform: translateX(80vw) translateY(1000px) rotate(400deg); fill-opacity:1; }
+}
+
+@keyframes snow6{
+  0%   {transform: translateX(0vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  50% {transform: translateX(12vw) translateY(1000px) rotate(120deg); fill-opacity:1; }
+  51% {transform: translateX(2vw) translateY(1000px) rotate(0deg); fill-opacity: 0; }
+  52% {transform: translateX(10vw) translateY(-100px) rotate(0deg); fill-opacity: .5; }
+  100% {transform: translateX(15vw) translateY(1000px) rotate(150deg); fill-opacity:1; }
+}
